2008-11-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/text.tcl: bug #1777362 - handle windows with funky names
	* test/text.test:   by avoiding use of the window path for anchors.

2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c    Fix [Bug 2265860] new test failures

2008-11-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c(BeginDrawing): Don't crash when 
	application uses nondefault visual [Bug 2264732].

2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       reverted change from 2008-11-06 (was under the impression
	                    that "-Wno-implicit-int" added an extra warning)
	* win/configure     (regenerated)
	* unix/tcl.m4:      Use -O2 as gcc optimization compiler flag, and get
	                    rid of -Wno-implicit-int for UNIX
	* unix/configure    (regenerated)

	* generic/tk.decls     modify Tk_Create(Old)ImageType signature, relaxing
	* generic/tk.h         the constraint that every Tk_ImageType can only
	* generic/tkImage.c    be passed to this function once. This allows
	* generic/tkImgBmap.c  tkImg to be loaded in multiple interpreters
	* generic/tkImgPhoto.c in a thread-enabled build of Tk.
	* generic/tkTest.c     This CONSTification complies with TIP #27. It is
	* doc/CrtImgType.3     binary compatible with the old interface, but not
	                       fully source compatible (although tkImg does not suffer).
	* generic/tkDecls.h (regenerated)

	*** POTENTIAL INCOMPATIBILITY ***

2008-11-09  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Remove unnecessary casts.

	* generic/ttk/ttkWidget.h, generic/ttk/ttkWidget.c:
	Ttk widget initializeProc()s now return void instead of
	a status code, and are no longer allowed to fail.
	(Fix for [Bug 2207435] in progress).

	* generic/ttk/ttkButton.c, generic/ttk/ttkEntry.c,
	generic/ttk/ttkFrame.c, generic/ttk/ttkNotebook.c,
	generic/ttk/ttkPanedwindow.c, generic/ttk/ttkProgress.c,